Reformat YAML, JSON, Markdown, Gradle, SQL and Java files for consistency
Signed-off-by: John Niang <johnniang@foxmail.com>